<resources>
    <string name="app_label">Messages</string>
    <string name="new_message">Messages</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_cp_messages">Configuration messages</string>
    <string name="menu_add_address_to_contacts">Add %s to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_view">View thread</string>
    <string name="menu_share">Share via</string>
    <string name="refreshing">Refreshing...</string>
    <string name="has_draft">Draft</string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="message_viewer_sent_to">Sent to %s</string>
    <string name="message_viewer_received_from">Received from %s</string>
    <string name="view_message_details">View message details</string>
    <string name="sent_on">%s</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="file_name_invalid_character">Invalid characters</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">Subject: %s</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Invalid DRM rights</string>
    <string name="copy_message_text">Copy</string>
    <string name="copy_message_to_sim">Copy to SIM</string>
    <string name="copy_to_sim_not_available">Unable to save as single message to SIM card. Message too large</string>
    <string name="done">Done</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_general_settings_title">General settings</string>
    <string name="pref_mms_change_over_alarm_title">MMS alert</string>
    <string name="pref_mms_change_over_alarm">Receive alerts when the mode changes to a multimedia message.</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages when maximum number of messages reached</string>
    <string name="pref_summary_delete_limit">%d messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Make sounds and show icon in status bar when you receive messages.</string>
    <string name="pref_title_notification_ringtone">Notification sound</string>
    <string name="pref_title_preview_message_notification">Preview message</string>
    <string name="pref_summary_preview_message_notification">Show a preview of received messages on the status bar and lock screen.</string>
    <string name="pref_title_mms_add_subject_field">Add subject field</string>
    <string name="pref_summary_mms_add_subject_field">Show and allow the subject field to be edited when forwarding multimedia messages.</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="menu_edit">Edit message</string>
    <string name="pref_summary_manage_smsc_messages">Message centre</string>
    <string name="pref_title_manage_smsc_messages">Not set</string>
    <string name="set_message_centre">Set message centre</string>
    <string name="pref_title_cb_activation">CB messages</string>
    <string name="pref_summary_cb_activation">Allows you to receive CB messages</string>
    <string name="pref_title_channel_configuration">Channel configuration</string>
    <string name="pref_title_mms_creation_mode">Set restrictions</string>
    <string name="pref_summary_mms_creation_mode">Set restrictions for multimedia content.</string>
    <string name="pref_dialog_title_mms_creation_mode">Select creation mode</string>
    <string name="pref_title_font_size">Message font size</string>
    <string name="pref_title_split_view">Split view</string>
    <string name="pref_summary_split_view">Enable split view on landscape screen</string>
    <string name="pref_title_bubble_style">Bubble style</string>
    <string name="pref_title_background_style">Background style</string>
    <string name="pref_cb_settings_title">Cell broadcast (CB) settings</string>
    <string name="pref_title_sms_input_mode">Input mode</string>
    <string name="pref_summary_sms_input_mode">Select a text input mode for composing messages.</string>
    <string name="pref_dialog_title_sms_input_mode">Select input mode</string>
    <string name="pref_title_sms_expiry_date">Expiry date</string>
    <string name="pref_summary_sms_expiry_date">Expiry date for SMS</string>
    <string name="pref_dialog_title_sms_expiry_date">Select expiry date</string>
    <string name="pref_push_message_settings_title">Push message settings</string>
    <string name="pref_title_push_message_enabled">Push messages</string>
    <string name="pref_summary_push_message_enabled">Receive push messages from network</string>
    <string name="pref_title_service_loading_action">Service loading</string>
    <string name="pref_dialog_title_service_loading_action">Service loading</string>
    <string name="cancel">Cancel</string>
    <string name="set_skin">Set skin</string>
    <string name="pref_title_notification_backlight">Screen On</string>
    <string name="pref_summary_notification_backlight">Screen on for notification alerts</string>
    <string name="pref_signature_settings_title">Signature settings</string>
    <string name="pref_title_signature_enabled">Signature</string>
    <string name="pref_title_signature_text">Edit signature</string>
    <string name="pref_callback_title">Callback number</string>
    <string name="pref_title_callback_enabled">Enable callback number</string>
    <string name="pref_title_callback_summary">Enter a default callback number</string>
    <string name="pref_title_callback_text">Callback number</string>
    <string name="pref_msg_repetition_alert">Repeat message alert</string>
    <string name="display_settings_title">Display</string>
    <string name="pref_summary_notification_cmas">Configure emergency alerts</string>
    <string name="pref_title_settings_cmas">Emergency alerts</string>
    <string name="cmas_receive_alests">Receive Alerts</string>
    <string name="cmas_presidential_alerts">Presidential Alerts</string>
    <string name="cmas_receive_presidental_alerts">Receive Presidential Alerts</string>
    <string name="cmas_extreme_alerts">Extreme Alerts</string>
    <string name="cmas_receive_extreme_alerts">Receive Extreme Alerts</string>
    <string name="cmas_severe_alerts">Severe Alerts</string>
    <string name="cmas_receive_severs_alerts">Receive Severe Alerts</string>
    <string name="cmas_amber_alerts">Amber Alerts</string>
    <string name="cmas_receive_child_abduction_emergency_alerts">Receive Child Abduction Emergency Alerts</string>
    <string name="cmas_cmas_test_message">CMAS Test Messages</string>
    <string name="cmas_receive_test_alerts">Receive Test Alerts</string>
    <string name="cmas_font_size">Font Size</string>
    <string name="cmas_font_explanation">This preference allows to set the font size for CMAS message</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="pref_title_notification_alertWhen">Alert sound</string>
    <string name="pref_summary_notification_alertWhen">Alert sound when notified</string>
    <string name="emergency_tone">Emergency tone</string>
    <string name="emergency_summary">Tap here to play the tone</string>
    <string name="cmas_reminder">Alert reminder</string>
    <string name="emergency_vibrate">Emergency vibration</string>
    <string name="emergency_vibrate_summary">Tap here to play the vibration</string>
    <string name="cmas_receive">Receive emergency messages</string>
    <string name="explainforCMASTitle">About emergency messages</string>
    <string name="cmas_setting_title">Emergency message settings</string>
    <string name="menu_templates">Quick responses</string>
    <string name="copy">Copy</string>
    <string name="pref_summary_manage_SD_messages">Manage messages stored on your SD card</string>
    <string name="pref_title_manage_SD_messages">Manage SD card messages</string>
    <string name="pref_title_spam_option">Message block</string>
    <string name="pref_spam_message_settings_title">Spam message settings</string>
    <string name="pref_title_spam_filter_unknown_senders">Block unknown senders</string>
    <string name="spam_list">Spam filter</string>
    <string name="spam_blocknumber_summary">Add numbers you want to register as spam.</string>
    <string name="spam_blockstring_summary">Add phrases you want to register as spam.</string>
    <string name="spam_blocksender_summary">Block message from unknown senders.</string>
    <string name="pref_title_register_number">Add to spam numbers</string>
    <string name="spam_keyword_blockphrases">Add to spam phrases</string>
    <string name="menu_send_now">Send now</string>
    <string name="sender_info_setting">Add sender information when forwarding</string>
    <string name="sender_info_title">Sender information</string>
    <string name="pref_summary_add_signature">Include signature in each message</string>
    <string name="enter_text">Enter text</string>
    <string name="pref_title_mms_group_mms">Group conversation</string>
    <string name="pref_summary_mms_group_mms">Send messages as group conversations by default.</string>
    <string name="message_lock">Lock</string>
    <string name="message_unlock">Unlock</string>
    <string name="pref_authority_settings_summary">Receive notifications when applications with the authority to send or receive messages are installed to prevent phishing.</string>
    <string name="pref_title_open_links_from_unknown_senders_summary">Allow links in messages to be followed.</string>
    <string name="pref_title_open_links_from_unknown_senders">Allow access to all links</string>
    <string name="pref_authority_settings">Potential threat alerts</string>
    <string name="pref_safemode_settings">Safe mode</string>
</resources>