<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_sms_general_settings_title" android:key="pref_key_storage_settings">
        <CheckBoxPreference android:title="@string/pref_title_auto_delete" android:key="pref_key_auto_delete" android:summary="@string/pref_summary_auto_delete" android:defaultValue="true" />
        <Preference android:persistent="false" android:title="@string/pref_title_sms_delete" android:key="pref_key_sms_delete_limit" android:summary="@string/pref_summary_delete_limit" android:dependency="pref_key_auto_delete" />
        <Preference android:persistent="false" android:title="@string/pref_title_mms_delete" android:key="pref_key_mms_delete_limit" android:summary="@string/pref_summary_delete_limit" android:dependency="pref_key_auto_delete" />
        <PreferenceScreen android:title="@string/menu_templates" android:key="pref_key_text_templates">
            <intent android:targetPackage="com.android.mms" android:action="android.intent.action.MAIN" android:targetClass="com.android.mms.template.TextTemplateListActivity">
                <extra android:name="callFromSettings" android:value="true" />
            </intent>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/menu_forward" android:key="pref_key_insert_sender_info_when_fwd_msg_category">
        <CheckBoxPreference android:title="@string/sender_info_title" android:key="pref_key_insert_sender_info_when_fwd_msg" android:summary="@string/sender_info_setting" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sms_settings_title" android:key="pref_key_sms_settings">
        <CheckBoxPreference android:title="@string/pref_title_sms_delivery_reports" android:key="pref_key_sms_delivery_reports" android:summary="@string/pref_summary_sms_delivery_reports" android:defaultValue="false" />
        <Preference android:title="@string/pref_title_manage_sim_messages" android:key="pref_key_manage_sim_messages" android:summary="@string/pref_summary_manage_sim_messages" />
        <Preference android:title="@string/pref_title_manage_SD_messages" android:key="pref_key_manage_SD_messages" android:summary="@string/pref_summary_manage_SD_messages" />
        <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="21" android:phoneNumber="true" android:title="@string/pref_summary_manage_smsc_messages" android:key="pref_key_manage_smsc_address" android:summary="@string/pref_title_manage_smsc_messages" android:dialogTitle="@string/set_message_centre" />
        <ListPreference android:entries="@array/pref_entries_sms_input_mode" android:title="@string/pref_title_sms_input_mode" android:key="pref_key_sms_input_mode" android:summary="@string/pref_summary_sms_input_mode" android:defaultValue="Automatic" android:dialogTitle="@string/pref_dialog_title_sms_input_mode" android:entryValues="@array/pref_entry_values_sms_input_mode" />
        <ListPreference android:entries="@array/pref_entries_sms_expiry_date" android:title="@string/pref_title_sms_expiry_date" android:key="pref_key_sms_expiry" android:summary="@string/pref_summary_sms_expiry_date" android:defaultValue="3 days" android:dialogTitle="@string/pref_dialog_title_sms_expiry_date" android:entryValues="@array/pref_entry_values_sms_expiry_date" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_mms_settings_title" android:key="pref_key_mms_settings">
        <CheckBoxPreference android:title="@string/pref_title_mms_group_mms" android:key="pref_key_mms_group_mms" android:summary="@string/pref_summary_mms_group_mms" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_mms_delivery_reports" android:key="pref_key_mms_delivery_reports" android:summary="@string/pref_summary_mms_delivery_reports" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_read_reports" android:key="pref_key_mms_read_reports" android:summary="@string/pref_summary_mms_read_reports" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_add_subject_field" android:key="pref_key_mms_add_subject_field" android:summary="@string/pref_summary_mms_add_subject_field" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_mms_auto_retrieval" android:key="pref_key_mms_auto_retrieval" android:summary="@string/pref_summary_mms_auto_retrieval" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_mms_retrieval_during_roaming" android:key="pref_key_mms_retrieval_during_roaming" android:summary="@string/pref_summary_mms_retrieval_during_roaming" android:dependency="pref_key_mms_auto_retrieval" android:defaultValue="false" />
        <ListPreference android:entries="@array/pref_entries_mms_creation_mode" android:title="@string/pref_title_mms_creation_mode" android:key="pref_key_mms_creation_mode" android:summary="@string/pref_summary_mms_creation_mode" android:defaultValue="free" android:dialogTitle="@string/pref_dialog_title_mms_creation_mode" android:entryValues="@array/pref_entry_values_mms_creation_mode" />
        <CheckBoxPreference android:title="@string/pref_mms_change_over_alarm_title" android:key="pref_key_mms_change_over_alarm" android:summary="@string/pref_mms_change_over_alarm" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/display_settings_title" android:key="pref_key_display_settings">
        <com.android.mms.ui.FontSizePreference android:entries="@array/pref_entries_font_size" android:title="@string/pref_title_font_size" android:key="pref_key_font_size" android:defaultValue="Follow system font size" android:dialogTitle="@string/pref_title_font_size" android:entryValues="@array/pref_entry_values_font_size" />
        <PreferenceScreen android:title="@string/pref_title_bubble_style" android:key="pref_key_bubble_style" android:summary="@string/set_skin">
            <intent android:targetPackage="com.android.mms" android:action="android.intent.action.MAIN" android:targetClass="com.android.mms.ui.BubbleTypePicker" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/pref_title_background_style" android:key="pref_key_background_color" android:summary="@string/set_skin">
            <intent android:targetPackage="com.android.mms" android:action="android.intent.action.MAIN" android:targetClass="com.android.mms.ui.BackgroundColorPicker" />
        </PreferenceScreen>
        <CheckBoxPreference android:title="@string/pref_title_split_view" android:key="pref_key_split_view" android:summary="@string/pref_summary_split_view" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_push_message_settings_title" android:key="pref_key_push_message_settings">
        <CheckBoxPreference android:title="@string/pref_title_push_message_enabled" android:key="pref_key_enable_push_message" android:summary="@string/pref_summary_push_message_enabled" android:defaultValue="true" />
        <ListPreference android:entries="@array/pref_entries_service_loading_action" android:title="@string/pref_title_service_loading_action" android:key="pref_key_service_loading_action" android:dependency="pref_key_enable_push_message" android:defaultValue="Prompt" android:dialogTitle="@string/pref_dialog_title_service_loading_action" android:entryValues="@array/pref_entry_values_service_loading_action" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cb_settings_title" android:key="pref_key_cb_settings">
        <CheckBoxPreference android:title="@string/pref_title_cb_activation" android:key="pref_key_cb_settings_activation" android:summary="@string/pref_summary_cb_activation" android:defaultValue="false" />
        <PreferenceScreen android:title="@string/pref_title_channel_configuration" android:key="pref_key_channel_configuration" android:dependency="pref_key_cb_settings_activation">
            <intent android:targetPackage="com.android.mms" android:targetClass="com.android.mms.ui.CbConfigPreferenceActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_settings_title" android:key="pref_notification_settings">
        <CheckBoxPreference android:title="@string/pref_title_notification_enabled" android:key="pref_key_enable_notifications" android:summary="@string/pref_summary_notification_enabled" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_notification_backlight" android:key="pref_key_backlight" android:summary="@string/pref_summary_notification_backlight" android:dependency="pref_key_enable_notifications" android:defaultValue="true" />
        <RingtonePreference android:title="@string/pref_title_notification_ringtone" android:key="pref_key_ringtone" android:dependency="pref_key_enable_notifications" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <CheckBoxPreference android:title="@string/pref_title_notification_vibrateWhen" android:key="pref_key_vibrateWhen_checkbox" android:summary="@string/pref_summary_notification_vibrateWhen" android:dependency="pref_key_enable_notifications" android:defaultValue="true" />
        <ListPreference android:entries="@array/msg_repetition_alert_Array" android:title="@string/pref_msg_repetition_alert" android:key="pref_key_msg_reminder_alert" android:dependency="pref_key_enable_notifications" android:defaultValue="1" android:entryValues="@array/msg_repetition_alert_Array_values" />
        <CheckBoxPreference android:title="@string/pref_title_preview_message_notification" android:key="pref_key_enable_preview_message" android:summary="@string/pref_summary_preview_message_notification" android:dependency="pref_key_enable_notifications" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cmas_setting_title" android:key="pref_cmas_settings">
        <PreferenceScreen android:title="@string/pref_title_settings_cmas" android:key="pref_key_cmas" android:summary="@string/pref_summary_notification_cmas" />
        <CheckBoxPreference android:title="@string/cmas_receive" android:key="pref_cmas_receive_class1" android:defaultValue="true" />
        <Preference android:title="@string/emergency_tone" android:key="pref_key_emergency_alert" android:summary="@string/emergency_summary" />
        <Preference android:title="@string/emergency_vibrate" android:key="pref_key_emergency_vibrate" android:summary="@string/emergency_vibrate_summary" />
        <CheckBoxPreference android:title="@string/pref_title_notification_vibrateWhen" android:key="pref_key_emergency_vibrateWhen" android:summary="@string/pref_summary_notification_vibrateWhen" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_notification_alertWhen" android:key="pref_key_emergency_alertWhen" android:summary="@string/pref_summary_notification_alertWhen" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <ListPreference android:entries="@array/msg_reminder_alert_Array" android:title="@string/cmas_reminder" android:key="pref_key_emergency_alert_reminder" android:defaultValue="0" android:entryValues="@array/msg_reminder_alert_Array_values" />
        <Preference android:title="@string/explainforCMASTitle" android:key="pref_key_explain_emergency_alert" android:dependency="pref_cmas_receive_class1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_signature_settings_title" android:key="pref_signature_settings">
        <CheckBoxPreference android:title="@string/pref_title_signature_enabled" android:key="pref_key_enable_signature" android:summary="@string/pref_summary_add_signature" android:defaultValue="false" />
        <com.android.mms.ui.SignaturePreference android:hint="@string/enter_text" android:title="@string/pref_title_signature_text" android:key="pref_key_signature_text" android:dependency="pref_key_enable_signature" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_callback_title" android:key="pref_callback_settings">
        <CheckBoxPreference android:title="@string/pref_title_callback_enabled" android:key="pref_key_enable_callback" android:summary="@string/pref_title_callback_summary" android:defaultValue="true" />
        <EditTextPreference android:singleLine="true" android:maxLength="20" android:title="@string/pref_title_callback_text" android:key="pref_key_callback_text" android:summary="@string/pref_title_callback_text" android:dependency="pref_key_enable_callback" android:inputType="phone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_spam_message_settings_title" android:key="pref_key_spam_settings">
        <ListPreference android:entries="@array/pref_entries_spam_option" android:title="@string/pref_title_spam_option" android:key="pref_key_spam_option" android:defaultValue="2" android:dialogTitle="@string/pref_title_spam_option" android:entryValues="@array/pref_entry_values_spam_option" />
        <CheckBoxPreference android:title="@string/spam_list" android:key="pref_key_spam_option_enable" android:defaultValue="false" />
        <Preference android:title="@string/pref_title_register_number" android:key="pref_key_spam_num_add" android:summary="@string/spam_blocknumber_summary" android:dependency="pref_key_spam_option_enable" />
        <Preference android:title="@string/spam_keyword_blockphrases" android:key="pref_key_spam_text_add" android:summary="@string/spam_blockstring_summary" android:dependency="pref_key_spam_option_enable" />
        <CheckBoxPreference android:title="@string/pref_title_spam_filter_unknown_senders" android:key="pref_key_spam_filter_unknown_enable" android:summary="@string/spam_blocksender_summary" android:dependency="pref_key_spam_option_enable" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_safemode_settings" android:key="pref_key_safemode_settings">
        <CheckBoxPreference android:title="@string/pref_title_open_links_from_unknown_senders" android:key="pref_key_urllink_option_enable" android:summary="@string/pref_title_open_links_from_unknown_senders_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <Preference android:title="@string/pref_authority_settings" android:key="pref_manage_access_authority" android:summary="@string/pref_authority_settings_summary" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>