<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="pref_key_sms_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/pref_title_sms_delivery_reports" android:key="pref_key_sms_delivery_reports" android:summary="@string/pref_summary_sms_delivery_reports" android:defaultValue="false" />
    <Preference android:title="@string/pref_title_manage_sim_messages" android:key="pref_key_manage_sim_messages" android:summary="@string/pref_summary_manage_sim_messages" android:fragment="com.android.mms.ui.ManageSimMessagesFragment" />
    <Preference android:title="@string/pref_title_manage_SD_messages" android:key="pref_key_manage_SD_messages" android:summary="@string/pref_summary_manage_SD_messages" android:fragment="com.android.mms.ui.ManageSDMessagesFragment" />
    <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="21" android:phoneNumber="true" android:title="@string/pref_summary_manage_smsc_messages" android:key="pref_key_manage_smsc_address" android:summary="@string/pref_title_manage_smsc_messages" android:dialogTitle="@string/set_message_centre" />
    <ListPreference android:entries="@array/pref_entries_sms_input_mode" android:title="@string/pref_title_sms_input_mode" android:key="pref_key_sms_input_mode" android:summary="@string/pref_summary_sms_input_mode" android:defaultValue="Automatic" android:dialogTitle="@string/pref_dialog_title_sms_input_mode" android:entryValues="@array/pref_entry_values_sms_input_mode" />
    <ListPreference android:entries="@array/pref_entries_sms_expiry_date" android:title="@string/pref_title_sms_expiry_date" android:key="pref_key_sms_expiry" android:summary="@string/pref_summary_sms_expiry_date" android:defaultValue="3 days" android:dialogTitle="@string/pref_dialog_title_sms_expiry_date" android:entryValues="@array/pref_entry_values_sms_expiry_date" />
</PreferenceScreen>