<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_send" android:id="@id/item_send_now" android:title="@string/menu_send_now" />
    <item android:icon="@drawable/header_button_icon_delete" android:id="@id/cancel" android:title="@string/cancel" />
    <item android:id="@id/copy" android:title="@string/copy" android:showAsAction="collapseActionView" />
    <item android:id="@id/forward" android:title="@string/menu_forward" android:showAsAction="collapseActionView" />
    <item android:id="@id/lock" android:title="@string/message_lock" android:showAsAction="collapseActionView" />
    <item android:id="@id/unlock" android:title="@string/message_unlock" android:showAsAction="collapseActionView" />
    <item android:id="@id/edit_message" android:title="@string/menu_edit" android:showAsAction="collapseActionView" />
    <item android:id="@id/done" android:title="@string/done" android:showAsAction="always" />
</menu>